layers.cpp
@@ -144,6 +144,20 @@ void Workspace::updateStackingOrder(bool propagate_new_clients)
     }
 }
 
+#ifdef KWIN_BUILD_SCREENEDGES
+/*!
+ * Some fullscreen effects have to raise the screenedge on top of an input window, thus all windows
+ * this function puts them back where they belong for regular use and is some cheap variant of
+ * the regular propagateClients function in that it completely ignores managed clients and everything
+ * else and also does not update the NETWM property.
+ * Called from Effects::destroyInputWindow so far.
+ */
+void Workspace::stackScreenEdgesUnderOverrideRedirect()
+{
+    Xcb::restackWindows(QVector<xcb_window_t>() << supportWindow->winId() << ScreenEdges::self()->windows());
+}
+#endif
+
 /*!
   Propagates the managed clients to the world.
   Called ONLY from updateStackingOrder().
